2008-12-03  Allan Saddi  <allan@saddi.com>

	* Update ez_setup.py.

2008-09-26  Allan Saddi  <allan@saddi.com>

	* Re-seed random module after each fork.

2008-09-11  Allan Saddi  <allan@saddi.com>

	* Add an indication as to which header fails assertion when
	  passing in non-string header names and/or values.

2008-08-20  Allan Saddi  <allan@saddi.com>

	* Add support for setting umask for UNIX domain sockets from
	  paste.server_factory implementations. Thanks to Michal Suszko
	  for the patch.

2008-07-23  Allan Saddi  <allan@saddi.com>

	* Add support for configuring UNIX domain sockets (for servers that
	  support them) in the paste.server_factory implementations. Thanks
	  to Dan Roberts for the code.

2008-07-22  Allan Saddi  <allan@saddi.com>

	* Release 1.0.1

	* Attempt to deduce missing PATH_INFO and/or QUERY_STRING from
	  REQUEST_URI, if present. Patch provided by Richard Davies.

2007-09-10  Allan Saddi  <allan@saddi.com>

	* Fix readline implementations so size argument is checked
	  earlier.

2007-07-14  Allan Saddi  <allan@saddi.com>

	* Prevent ThreadPool inconsistences if an exception is
	  actually raised. Thanks to Tim Chen for the patch.

2007-06-05  Allan Saddi  <allan@saddi.com>

	* Remove publisher and middleware packages.
	* Add cgi server for completeness.

2007-05-17  Allan Saddi  <allan@saddi.com>

	* Fix fcgi_fork so it can run on Solaris. Thanks to
	  Basil Crow for the patch.

2007-01-22  Allan Saddi  <allan@saddi.com>

	* Fix eunuchs import issue.

2007-01-10  Allan Saddi  <allan@saddi.com>

	* Support gzip compression of XHTML pages using the
	  correct MIME type.

2006-12-29  Allan Saddi  <allan@saddi.com>

	* Deprecate WSGI_SCRIPT_NAME and scriptName in scgi_base.
	  Modern versions of mod_scgi correctly set SCRIPT_NAME &
	  PATH_INFO.

2006-12-13  Allan Saddi  <allan@saddi.com>

	* Fix problem in session.py seen when optimization is on.

2006-12-05  Allan Saddi  <allan@saddi.com>
