@@ -1,3 +1,8 @@
+2009-02-02  Allan Saddi  <allan@saddi.com>
+
+	* Merge Tommi Virtanen's "single server" (sequential server)
+	  patch.
+
 2008-12-03  Allan Saddi  <allan@saddi.com>
 
 	* Update ez_setup.py.
